--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
-* {
-	outline: red 1px solid;
+/** {
+	outline: red 1px solid;*/
 }
 body {
 	background-color: black;
@@ -45,6 +45,6 @@ body {
 	float: left;
 	position: absolute;
 	z-index: 10;
-	top: 171;
+	top: 171px;
 	left: 577px;
 }
