--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,3 @@
-/** {
-	outline: red 1px solid;*/
-}
 body {
 	background-color: black;
 }
@@ -18,11 +15,11 @@ body {
 	width: 659px;
 	height: 494px;
 }
-.ryu-ready, .ryu-still, .ryu-throwing {
+.ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
 	width: 659px;
 	height: 494px;
 }
-.ryu-ready, .ryu-throwing {
+.ryu-ready, .ryu-throwing, .ryu-cool {
 	display: none;
 }
 .ryu-ready {
@@ -34,7 +31,10 @@ body {
 .ryu-throwing {
 	background-image: url('../images/ryu-throwing-hadouken.png');
 }
-.hadouken, .ryu-ready, .ryu-still, .ryu-throwing {
+.ryu-cool {
+	background-image: url('../images/ryu-cool.gif');
+}
+.hadouken, .ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
   background-repeat: no-repeat;
 }
 .hadouken {
@@ -47,4 +47,13 @@ body {
 	z-index: 10;
 	top: 171px;
 	left: 577px;
+}
+.instructions {
+	margin: 0 auto;
+	padding-right: 50px;
+	padding-top: 175px;
+	font-family: sans-serif;
+	font-style: italic;
+	font-size: 2rem;
+	display: inline-block;
 }
